--- a/src/App.css
+++ b/src/App.css
@@ -1,16 +1,11 @@
 .App {
   text-align: center;
+  margin-top: 15px;
 }
 
 .App-logo {
   height: 40vmin;
   pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
 }
 
 .App-header {
@@ -35,4 +30,8 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.App .navbar-brand {
+  font-weight: bold;
 }
